改removePhotos使用的变量